--- a/style.css
+++ b/style.css
@@ -14,19 +14,60 @@
   
   body {
     font-family: 'MyWebFont', Helvetica Neue, sans-serif;
-    padding: 10px;
+    padding: 0px;
     background: #2F2FA2;
     color: white;
   }
   
-  /* Header/Blog Title */
-  .header {
-    padding: 30px;
-    text-align: center;
-    background:#2F2FA2;
+  .avatar {
+    width: 150px;
+    height: 150px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+
+ 
+  .profile-pic {
+    display: inline;
+    margin: -30px auto;
     
+    height: 150%;
+    width: auto;
+
   }
   
+  .container {
+      max-width: 960px;
+      margin: auto;
+  }
+
+    .header {
+    padding-left: 0px;
+    margin-top: -5px;
+    margin-bottom: -3px;  
+   
+  }
+
+  .textcover {
+    text-align: center;
+    position: absolute;
+    top: 23%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  .imgbg {
+      opacity: 20%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/it7.jpg");
+    height: 300px;
+    width: 960px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    position:relative;
+}
+
   .header h1 {
     font-size: 50px;
     color: white;
@@ -46,12 +87,16 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    
   }
+  
+
   
   /* Change color on hover */
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: #ffff;
     color: #F64C72;
+    
   }
   
   /* Create two unequal columns that floats next to each other */
@@ -65,16 +110,21 @@
   .rightcolumn {
     float: left;
     width: 25%;
-    background-color: #2F2FA2;
     padding-left: 20px;
   }
   
   /* Fake image */
+  div.img {    
+    padding: 00px;
+  }
+
   .fakeimg {
     background-color: #aaa;
     width: 100%;
-    padding: 20px;
+    padding: 0px;
   }
+
+  
   
   /* Add a card effect for articles */
   .card {
@@ -94,6 +144,12 @@
     display: table;
     clear: both;
   }
+
+  .befoot {
+    height:300px;
+    width:100%;
+
+  }
   
   /* Footer */
   .footer {
@@ -110,7 +166,7 @@
       font-size: 12px;
   }
   .leftfooter {
-      margin-top: 30px;
+      margin-top: 20px;
       float: left;
       width: 33.3%;
   }
@@ -126,6 +182,10 @@
 
   }
   
+  ul {
+      margin-left: -22px;
+      line-height: 60%;
+  }
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 800px) {
     .leftcolumn, .rightcolumn {   
