--- a/style.css
+++ b/style.css
@@ -22,32 +22,31 @@
   
   p {
     font-size: 13px;
-    line-height: 17px;
+    line-height: 18px;
 } 
 :root {
-    --mainColor: #ff9800;
+    --mainColor: #F64C72;
   }
   
- 
  
 A.class1 {color:white}
 
 A.class2 {color:white;}
 A.class2:link {background:
-linear-gradient(
-  to bottom, var(--mainColor) 0%,
-  var(--mainColor) 100%
-);
-background-position: 0 100%;
-background-repeat: repeat-x;
-background-size: 4px 4px;
-color: #000;
-text-decoration: none;
-transition: background-size .2s;}
-A.class2:link {text-decoration: none; color: white;}
-A.class2:visited {text-decoration: none; color: white;}
-A.class2:hover {background-size: 4px 50px;}
-A.class2:active {text-decoration: none; color: white;}
+        linear-gradient(
+        to bottom, var(--mainColor) 0%,
+        var(--mainColor) 100%
+        );
+        background-position: 0 100%;
+        background-repeat: repeat-x;
+        background-size: 4px 4px;
+        color: #000;
+        text-decoration: none;
+        transition: background-size .2s;}
+        A.class2:link {text-decoration: none; color: white;}
+        A.class2:visited {text-decoration: none; color: white;}
+        A.class2:hover {background-size: 4px 50px;}
+        A.class2:active {text-decoration: none; color: white;}
 
   
   .avatar {
@@ -56,12 +55,13 @@ A.class2:active {text-decoration: none; color: white;}
     position: relative;
     overflow: hidden;
     border-radius: 50%;
+    margin-bottom: 10px;
   }
 
  
   .profile-pic {
     display: inline;
-    margin: -30px auto;
+    margin: -60px auto;
     
     height: 150%;
     width: auto;
@@ -167,7 +167,7 @@ A.class2:active {text-decoration: none; color: white;}
     ),
     url(/img/un4.jpg);
   background-size: cover;
-  width: 960px;
+  width: 100%;
   height: 365px;
   margin: 0px 0px 20px 0px;
   position: relative;
@@ -210,6 +210,26 @@ A.class2:active {text-decoration: none; color: white;}
 }
 
 
+.blackbox {
+    background: black;
+    height: 300px;
+    margin-bottom: 0px;
+    padding-bottom: 80px;
+}
+.blackboxleft {
+    float: left;
+    width: 35%;
+    padding-top: 0px;
+   
+}
+.blackboxright {
+  float: left;
+  width: 65%;
+  color: white;
+  margin-top: 110px;
+}
+
+
 /* here */
   
   /* Add a card effect for articles */
@@ -237,6 +257,12 @@ A.class2:active {text-decoration: none; color: white;}
 
   }
   
+
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
   /* Footer */
   .footer {
     padding: 20px;
@@ -245,9 +271,6 @@ A.class2:active {text-decoration: none; color: white;}
     margin-top: 20px;
     height: 150px;
     font-size: 12px;
-    
-    
-  
   }
 
   .footer a {
@@ -273,7 +296,7 @@ A.class2:active {text-decoration: none; color: white;}
   
   ul {
       margin-left: -22px;
-      line-height: 60%;
+      line-height: 5%;
   }
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 800px) {
