--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   body {
     font-family: 'MyWebFont', Helvetica Neue, sans-serif;
     padding: 0px;
-    background: #2F2FA2;
+    background:black;
     color: white;
   }
 
