--- a/style.css
+++ b/style.css
@@ -125,7 +125,8 @@ A.class2:link {background:
   
   /* Change color on hover */
   .topnav a:hover {
-    background-color: #ffff;
+    background-color:black;
+    
     color: #F64C72;
     
   }
@@ -296,7 +297,7 @@ A.class2:link {background:
   
   ul {
       margin-left: -22px;
-      line-height: 5%;
+      
   }
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 800px) {
